[package]
name = "discord-v"
version = "0.1.0"
authors = ["dcdgo <mail@samueljenks.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.76"
http = "0.2.1"

[dependencies.serenity]
features = ["framework", "standard_framework"]
version = "0.9.0-rc.0"
