[package]
name = "discord-v"
version = "0.1.0"
authors = ["dcdgo <mail@samueljenks.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.76"
http = "0.2.1"
tokio = { version = "0.2.22", features = ["full"] }
reqwest = { version = "0.10.8" }


[target.'cfg(unix)'.dependencies]
openssl = "0.10"

[dependencies.serenity]
features = ["framework", "standard_framework"]
version = "0.10.2"

[[bin]]
name = "bot"
path = "src/main.rs"
